# vampi

./: .buildinfo  .gitignore  CITATION.cff  Dockerfile  LICENSE  README.md  _config.yml  authors.html  content.html  genindex.html  index.html  index.md  installation.html  intro.html  markdown-notebooks.html  markdown.html  notebooks.html  objects.inv  pyproject.toml  search.html  searchindex.js  software.html
.github/workflows/: build_docs.yml  check_formatting.yml  pages.yml  test_package_coverage.yml
_sources/: authors.md  index.md  markdown-notebooks.ipynb  software.md
_sources/vampy/: README.md
_sources/vampy/vampy/: markdown-notebooks.ipynb
docker/: Dockerfile
docs/: _config.yml  _toc.yml  api.rst  index.md  installation.md
docs/vampy/.github/workflows/: deploy.yml
docs/vampy/vampy/: _config.yml
src/vampy/: __init__.py  __main__.py  mvp.py
tests/: .coverage
vampy/: CONDUCT.html  CONTRIBUTING.html  README.html
vampy/vampy/: content.html  intro.html  markdown-notebooks.html  markdown.html  notebooks.html
