[build-system] # Require setuptool version due to https://github.com/pypa/setuptools/issues/2938
requires = ["setuptools>=61.0.0", "wheel"]

[project]
name = "vampy"
version = "0.1.0"
description = "TMP TITLE"
authors = [{name = "Henrik A. Kjeldsberg", email = "henriakj@simula.no"}]
license = {file = "LICENSE"}
readme = "README.md"

[project.scripts]
vampy = "vampy.cli:main"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]
dev = [
    "pdbpp",
    "ipython",
"mypy",
    "flake8",
]
all = [
   "vampy[test]",
   "vampy[dev]",
]

[tool.pytest.ini_options]
addopts = [
   "--import-mode=importlib",
   "--cov=vampy",
   "--cov-report=html",
   "--cov-report=term-missing",
   "-v"
]
testpaths = [
    "tests"
]

[tool.mypy]
ignore_missing_imports = true
# Folders to exclude
exclude = [
    "docs/",
    "build/"
]
# Folder to check with mypy
files = [
    "src",
    "tests"
]
